src/test/resources/semantic/correct/TC_ATRIBUTO_METODO_IGUAL.ru
/? CORRECTO: SEMANTICO - DECLARACIONES
/? puede haber metodos y atributos con el mismo nombre

struct A{
    pri Int a;
    Str b;
}

impl A{
    .(){
        
    }
    fn a()->void{

    }
    st fn b(Str c)-> Int{

    }
}

start{

}