src/test/resources/semantic/error/TS_ERROR_NO_CONSTRUCTOR.ru
/?
/?
/?
/? todo struct en su impl debe tener un constructor

struct A{

}

impl A{
    fn m1()->void{

    }
}

start{
    
}